remove flip card

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,66 +1,7 @@
 .jumbotron {
   text-align: center;
-
   margin: 4% 20%;
 }
-
-.container {
-  margin-top: 5vh;
-  margin-left: 35vw;
-  position: relative;
-}
-#flip-card {
-  width: 30%;
-  height: 80%;
-  min-width: 500px;
-  min-height: 550px;
-  text-align: center;
-  -o-transition: all 1s ease-in-out;
-  -webkit-transition: all 1s ease-in-out;
-  -ms-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
-.do-flip {
-  -o-transform: rotateY(-100deg);
-  -webkit-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-
-#flip-card .flip-card-front, #flip-card .flip-card-back{
-  border-radius: 50px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -webkit-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
-  -moz-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
-  box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
-}
-#flip-card .flip-card-front {
-    background: #3F6773;
-    border:1px solid grey;
-}
-#flip-card .flip-card-back {
-    background: #E27D5A;
-    border: 1px solid grey;
-    -o-transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-#flip-card .flip-card-front p, #flip-card .flip-card-back p {
-  color: grey;
-  display: block;
-  position: absolute;
-  top: 40%;
-  width: 30%;
+.container .jumbotron {
+  min-height: 400px;
 }
