--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,9 @@ body {
   background-position: center;
   background-size: cover;
 }
+img {
+  margin:0 15px;
+}
 .jumbotron {
   text-align: center;
   margin: 4% 20%;
