remove back button style

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,7 @@ img {
 h1 {
   font-size: 4rem;
 }
-.button, #back {
+.button {
   font-size: 1.1rem;
   border-radius: 8px;
   margin-bottom: 20px;
@@ -33,6 +33,6 @@ h1 {
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
 }
-.button:hover, #back:hover {
+.button:hover {
   background-color: rgb(67, 67, 67);
 }
